fix main axis alignment for row

--- a/src/app/components/elements-properties/row-properties/row-properties.component.css
+++ b/src/app/components/elements-properties/row-properties/row-properties.component.css
@@ -17,10 +17,15 @@
   align-items: center;
   padding: 16px;
 }
-p {
+.header {
   align-items: center;
   font-size: 18px;
   font-weight: 450;
+}
+
+p{
+  font-size: 14px;
+  font-weight: 200;
 }
 
 ul {
